--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
     </nav>
 
-    <main class="container mt-5">
+    <main class="container mt-5 py-5">
         <div class=" row ">
             <div class="col-6 pt-5">
                 <h1>Hello, <br> My name is <br> Kevin Nathanael <br> Taufiek
@@ -38,10 +38,34 @@
                 <a class="download-btn" href="Assets/CV.pdf">Download CV</a>
             </div>
             <div class="col-6 ">
-                <img class="greeting-illustration " src="Assets/undraw.svg " alt=" ">
+                <img class="greeting-illustration " src="Assets/undraw.svg " alt=" greeting-illustration ">
             </div>
         </div>
     </main>
+
+    <div class="about py-5 my-5">
+        <div class="container">
+            <div class="d-flex justify-content-center">
+                <h1>About Me</h1>
+            </div>
+            <div class="row mt-3">
+                <div class="col-6">
+                    <div class="pp">
+                        <div class="circle"></div>
+                        <div class="photo-profile d-flex justify-content-center align-items-center">
+                            <img src="Assets/photo-profile.png" alt="photo-profile">
+                        </div>
+                        <div class="circle"></div>
+                    </div>
+                </div>
+                <div class="col-6 d-flex align-items-center">
+                    <p>Currently a second year computer science student at Bina Nusantara University, Software Engineering Stream program. Joined Binus Student Learning Community Organization (BSLC) as an IT Support activist and mentor. Understand the basics
+                        of computer science such as problem solving, programming algorithms, and so on as well as soft skills such as leadership, communication, and collaboration. Became "Beasiswa Juara" scholarship awardee and became a scholarship mentor
+                        for 2 periods. Have an interest in Web Development and Mobile Development.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
 </body>
