large page development

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h1>Hello, <br> My name is <br> Kevin Nathanael <br> Taufiek
                 </h1>
                 <p>I'm a computer science Student <br> at Bina Nusantara University</p>
-                <a class="download-btn" href="Assets/CV.pdf">Download CV</a>
+                <a class="download-btn" href="Assets/CV.pdf" target="_blank">Download CV</a>
             </div>
             <div class="col-6 ">
                 <img class="greeting-illustration " src="Assets/undraw.svg " alt=" greeting-illustration ">
@@ -67,6 +67,74 @@
         </div>
     </div>
 
+    <div class="skill py-5 my-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-5 offset-1 d-flex justify-content-center">
+                    <h1>Experiences</h1>
+                </div>
+                <div class="col-5 d-flex justify-content-center">
+                    <h1>Skills</h1>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="experiences col-5 offset-1 me-1 d-flex justify-content-center align-items-center flex-wrap p-5">
+                    <img src="Assets/Logo/BSLC-1.png" alt="">
+                    <img src="Assets/Logo/Logo-Binus-University-Universitas-Bina-Nusantara-Original-PNG.png" alt="">
+                </div>
+                <div class="skills col-5 ml-1 d-flex justify-content-center align-items-center flex-wrap p-5">
+                    <img src="Assets/Logo/1200px-Laravel.svg.png" alt="">
+                    <img src="Assets/Logo/Bootstrap_logo.svg.png" alt="">
+                    <img src="Assets/Logo/html5-logo-31816.png" alt="">
+                    <img src="Assets/Logo/AspNetCore.png" alt="">
+                    <img src="Assets/Logo/c-programming.png" alt="">
+                    <img src="Assets/Logo/MySQL-Logo.wine.png" alt="">
+                    <img src="Assets/Logo/php_emblem.png" alt="">
+                    <img src="Assets/Logo/java.png" alt="">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="works my-5">
+        <div class="container">
+            <h1>Works</h1>
+            <p>Here are some projects that I have worked on</p>
+
+            <div class="showcase d-flex justify-content-center flex-wrap">
+                <a href="https://github.com/KevinNathanaelTaufiek/StoreDelLuna" target="_blank">
+                    <img src="Assets/Works/storeDelLuna.png" alt="">
+                </a>
+                <a href="https://github.com/KevinNathanaelTaufiek/Hackathon2021_BNCC" target="_blank">
+                    <img src="Assets/Works/nginepKuy.png" alt="">
+                </a>
+                <a href="https://github.com/KevinNathanaelTaufiek/Ecommerce-Laravel-7" target="_blank">
+                    <img src="Assets/Works/e-commerce.png" alt="">
+                </a>
+            </div>
+            <a class="more" href="https://github.com/KevinNathanaelTaufiek?tab=repositories" target="_blank">
+                <p>See more project here</p>
+            </a>
+        </div>
+    </div>
+
+    <footer class="d-flex align-items-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 offset-4 d-flex align-items-center justify-content-center">
+                    <p class="m-0">Made with love &hearts; by KevinNT</p>
+                </div>
+
+                <div class="contact col-4 text-end">
+                    <a href="https://github.com/KevinNathanaelTaufiek" target="_blank"><img src="Assets/icon/github.svg" alt=""></a>
+                    <a href="mailto:kevin.taufiek@gmail.com?subject=[WebProfile] Hai Kevin" target="_blank"><img src="Assets/icon/email.svg" alt=""></a>
+                    <a href="https://www.linkedin.com/in/kevinnt98/" target="_blank"><img src="Assets/icon/linkedin-rect.svg" alt=""></a>
+                    <a href="https://www.instagram.com/kevin_nt/" target="_blank"><img src="Assets/icon/social-instagram.svg" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
 </body>
 
