--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </button>
             <div class="collapse navbar-collapse d-flex-lg justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    <a class="nav-link" href="#">Skills</a>
-                    <a class="nav-link" href="#">Works</a>
-                    <a class="nav-link" href="#">Contact Me</a>
+                    <a class="nav-link active" aria-current="page" href="">Home</a>
+                    <a class="nav-link" href="#skill-section">Skills</a>
+                    <a class="nav-link" href="#work-section">Works</a>
+                    <a class="nav-link" href="mailto:kevin.taufiek@gmail.com?subject=[WebProfile] Hai Kevin">Contact Me</a>
                 </div>
             </div>
         </div>
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <div class="skill py-5 my-5">
+    <div class="skill py-5 my-5" id="skill-section">
         <div class="container">
             <div class="row">
                 <div class="col-5 offset-1 d-flex justify-content-center">
@@ -97,7 +97,7 @@
         </div>
     </div>
 
-    <div class="works my-5">
+    <div class="works my-5" id="work-section">
         <div class="container">
             <h1>Works</h1>
             <p>Here are some projects that I have worked on</p>
