--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Hey, I'm Kevin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 </head>
 
 <body>
@@ -50,7 +52,7 @@
             </div>
             <div class="row mt-3">
                 <div class="col-6">
-                    <div class="pp">
+                    <div class="pp" data-aos="flip-right">
                         <div class="circle"></div>
                         <div class="photo-profile d-flex justify-content-center align-items-center">
                             <img src="Assets/photo-profile.png" alt="photo-profile">
@@ -78,11 +80,11 @@
                 </div>
             </div>
             <div class="row mt-5">
-                <div class="experiences col-5 offset-1 me-1 d-flex justify-content-center align-items-center flex-wrap p-5">
+                <div class="experiences col-5 offset-1 me-1 d-flex justify-content-center align-items-center flex-wrap p-5" data-tilt>
                     <img src="Assets/Logo/BSLC-1.png" alt="">
                     <img src="Assets/Logo/Logo-Binus-University-Universitas-Bina-Nusantara-Original-PNG.png" alt="">
                 </div>
-                <div class="skills col-5 ml-1 d-flex justify-content-center align-items-center flex-wrap p-5">
+                <div class="skills col-5 ml-1 d-flex justify-content-center align-items-center flex-wrap p-5" data-tilt>
                     <img src="Assets/Logo/1200px-Laravel.svg.png" alt="">
                     <img src="Assets/Logo/Bootstrap_logo.svg.png" alt="">
                     <img src="Assets/Logo/html5-logo-31816.png" alt="">
@@ -98,7 +100,7 @@
     </div>
 
     <div class="works my-5" id="work-section">
-        <div class="container">
+        <div class="container" data-aos="fade-down">
             <h1>Works</h1>
             <p>Here are some projects that I have worked on</p>
 
@@ -136,6 +138,16 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="tilt.jquery.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            delay: 100,
+            mirror: true,
+            easing: "ease-in-out"
+        });
+    </script>
 </body>
 
 </html>
