--- a/index.html
+++ b/index.html
@@ -33,25 +33,25 @@
 
     <main class="container mt-5 py-5">
         <div class=" row ">
-            <div class="col-6 pt-5">
+            <div class="col-lg-6 col-sm-12">
                 <h1>Hello, <br> My name is <br> Kevin Nathanael <br> Taufiek
                 </h1>
                 <p>I'm a computer science Student <br> at Bina Nusantara University</p>
                 <a class="download-btn" href="Assets/CV.pdf" target="_blank">Download CV</a>
             </div>
-            <div class="col-6 ">
+            <div class="col-lg-6  col-sm-12 mt-5 mt-lg-0">
                 <img class="greeting-illustration " src="Assets/undraw.svg " alt=" greeting-illustration ">
             </div>
         </div>
     </main>
 
     <div class="about py-5 my-5">
-        <div class="container">
+        <div class="container" data-aos="fade-down">
             <div class="d-flex justify-content-center">
                 <h1>About Me</h1>
             </div>
             <div class="row mt-3">
-                <div class="col-6">
+                <div class="col-lg-6 col-sm-12">
                     <div class="pp" data-aos="flip-right">
                         <div class="circle"></div>
                         <div class="photo-profile d-flex justify-content-center align-items-center">
@@ -60,7 +60,7 @@
                         <div class="circle"></div>
                     </div>
                 </div>
-                <div class="col-6 d-flex align-items-center">
+                <div class="col-lg-6 col-sm-12 d-flex align-items-center desc">
                     <p>Currently a second year computer science student at Bina Nusantara University, Software Engineering Stream program. Joined Binus Student Learning Community Organization (BSLC) as an IT Support activist and mentor. Understand the basics
                         of computer science such as problem solving, programming algorithms, and so on as well as soft skills such as leadership, communication, and collaboration. Became "Beasiswa Juara" scholarship awardee and became a scholarship mentor
                         for 2 periods. Have an interest in Web Development and Mobile Development.</p>
@@ -70,7 +70,7 @@
     </div>
 
     <div class="skill py-5 my-5" id="skill-section">
-        <div class="container">
+        <div class="container" data-aos="fade-down">
             <div class="row">
                 <div class="col-5 offset-1 d-flex justify-content-center">
                     <h1>Experiences</h1>
@@ -123,12 +123,12 @@
 
     <footer class="d-flex align-items-center">
         <div class="container">
-            <div class="row">
-                <div class="col-4 offset-4 d-flex align-items-center justify-content-center">
+            <div class="row p-lg-0 p-4">
+                <div class="col-lg-4 col-sm-12 offset-lg-4 offset-sm-0 d-flex align-items-center justify-content-center">
                     <p class="m-0">Made with love &hearts; by KevinNT</p>
                 </div>
 
-                <div class="contact col-4 text-end">
+                <div class="contact col-lg-4 col-sm-12 d-flex justify-content-lg-end justify-content-center">
                     <a href="https://github.com/KevinNathanaelTaufiek" target="_blank"><img src="Assets/icon/github.svg" alt=""></a>
                     <a href="mailto:kevin.taufiek@gmail.com?subject=[WebProfile] Hai Kevin" target="_blank"><img src="Assets/icon/email.svg" alt=""></a>
                     <a href="https://www.linkedin.com/in/kevinnt98/" target="_blank"><img src="Assets/icon/linkedin-rect.svg" alt=""></a>
