--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </main>
 
     <div class="about py-5 my-5">
-        <div class="container" data-aos="fade-down">
+        <div class="container">
             <div class="d-flex justify-content-center">
                 <h1>About Me</h1>
             </div>
@@ -61,7 +61,7 @@
                         <div class="circle"></div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-sm-12 d-flex align-items-center desc">
+                <div class="col-lg-6 col-sm-12 d-flex align-items-center desc" data-aos="fade-down">
                     <p>Currently a second year computer science student at Bina Nusantara University, Software Engineering Stream program. Joined Binus Student Learning Community Organization (BSLC) as an IT Support activist and mentor. Understand the basics
                         of computer science such as problem solving, programming algorithms, and so on as well as soft skills such as leadership, communication, and collaboration. Became "Beasiswa Juara" scholarship awardee and became a scholarship mentor
                         for 2 periods. Have an interest in Web Development and Mobile Development.</p>
@@ -81,11 +81,11 @@
                 </div>
             </div>
             <div class="row mt-5">
-                <div class="experiences col-5 offset-1 me-1 d-flex justify-content-center align-items-center flex-wrap p-5" data-tilt>
+                <div class="experiences col-lg-5 col-sm-12 offset-lg-1 offset-sm-0 me-1 d-flex justify-content-center align-items-center flex-wrap p-5" data-tilt>
                     <img src="Assets/Logo/BSLC-1.png" alt="">
                     <img src="Assets/Logo/Logo-Binus-University-Universitas-Bina-Nusantara-Original-PNG.png" alt="">
                 </div>
-                <div class="skills col-5 ml-1 d-flex justify-content-center align-items-center flex-wrap p-5" data-tilt>
+                <div class="skills col-lg-5 col-sm-12 ml-1 d-flex justify-content-center align-items-center flex-wrap p-5" data-tilt>
                     <img src="Assets/Logo/1200px-Laravel.svg.png" alt="">
                     <img src="Assets/Logo/Bootstrap_logo.svg.png" alt="">
                     <img src="Assets/Logo/html5-logo-31816.png" alt="">
@@ -141,7 +141,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="tilt.jquery.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
             delay: 100,
