--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property='og:title' content="Kevin's Personal Website"/>
+    <meta property='og:image' content="<%= require('./Assets/og-meta-image.png') %>"/>
+    <meta property='og:description' content='Hello everyone, checkout my personal website'/>
+    <meta property='og:url' content='https://kevinnathanaeltaufiek.github.io/'/>
+
+
     <title>Hey, I'm Kevin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
