--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta property='og:title' content="Kevin's Personal Website"/>
-    <meta property='og:image' content="./Assets/og-meta-image.png'"/>
+    <meta property='og:image' content="./Assets/og-meta-image.png"/>
     <meta property='og:description' content='Hello everyone, checkout my personal website'/>
     <meta property='og:url' content='https://kevinnathanaeltaufiek.github.io/'/>
 
